--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.14.0",
-    "foundation-sites": "^6.2.3",
+    "foundation-sites": "^6.2.3"
   },
   "author": "",
   "license": "ISC"
